# cpp_template

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  rtspTest  tcap  tcap.cbp
encoder/src/: encoder.cpp  encoder.h  main.cpp  videosource.h
rtspstream/src/: rtsp_resource.cpp  rtsp_resource.h
rtspstream/test/: test.cpp
